# agent-harness-base

./: .env.example  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: architecture.md  development.md  structured-output.md  tools.md  usage.md
examples/: README.md  basic_agent.py  chat_persistence.py  chat_session.py  chat_with_images.py  custom_provider.py  file_input.py  image_input.py  mcp_server.py  parallel_tools.py  streaming.py  structured_output.py  structured_with_tools.py  sync_agent.py  sync_streaming.py  system_prompt.py  web_search.py
scripts/: live_e2e_test.py
skills/simple-agent-base/: SKILL.md
skills/simple-agent-base/references/: api-notes.md  examples.md
src/agent_harness/: __init__.py  agent.py  chat.py  config.py  types.py
src/agent_harness/providers/: base.py  openai.py
src/agent_harness/tools/: base.py  decorators.py  registry.py
src/simple_agent_base/: __init__.py  agent.py  mcp.py  types.py
src/simple_agent_base/providers/: base.py  openai.py
tests/: test_agent.py  test_mcp.py  test_openai_provider.py  test_streaming.py  test_tools.py
